--- a/css/style.scss
+++ b/css/style.scss
@@ -10,7 +10,7 @@ html {
 
 body {
     height: 100%;
-    background-color: hsl(var(--hue), var(--sat), 10%);
+    background-color: hsl(var(--h), var(--s), 10%);
 }
 
 *,
