--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -1,28 +1,144 @@
 nav {
-    display: flex;
+    --height: 3em;
+    --background-color: hsl(var(--h), var(--s), 90%);
+    --highlight: hsl(var(--h), var(--s), 85%);
+    --highlight-text: hsl(var(--h), var(--s), 0%);
+    background-color: var(--background-color);
     color: var(--color-title);
+    justify-content: center;
     line-height: 1;
+    z-index: 1;
+
+    &,
+    * {
+        display: flex;
+    }
+
     a {
-        color: inherit;
-        text-decoration: none;
-        display: flex;
-        justify-content: center;
         align-items: center;
-        text-align: center;
+        color: inherit;
+        flex-grow: 1;
+        gap: .5em;
+        min-height: var(--height);
         padding: 0 1em;
-    }
-    ul {
-        display: flex;
-        list-style-type: none;
-    }
-    li {
-        display: flex;
-        &:hover {
-            background-color: hsl(var(--hue), var(--sat), 85%);
+        text-align: center;
+        text-decoration: none;
+        white-space: nowrap;
+
+        &::after {
+            margin-right: -.5em;
+            margin-left: auto;
         }
     }
-    .interface > & {
-        background-color: hsl(var(--hue), var(--sat), 90%);
-        height: 2em;
+
+    li {
+        position: relative;
+
+        &:hover,
+        &:focus-within {
+            background-color: var(--highlight);
+
+            & > a {
+                color: var(--highlight-text);
+            }
+        }
+
+        &:has(ul) {
+            > a::after {
+                content: '\25b8';
+            }
+        }
+    }
+
+    ul {
+        background-color: var(--background-color);
+        flex-direction: column;
+        left: 100%;
+        list-style-type: none;
+        position: absolute;
+        z-index: 2;
+
+        :not(:focus-within):not(:hover) ul {
+            display: none;
+        }
+
+    }
+
+    // Top level
+    > ul {
+        background-color: transparent;
+        flex-direction: row;
+        flex-grow: 1;
+        position: static;
+
+        > li {
+            > a {
+                justify-content: center;
+            }
+
+            &:has(ul) > a::after {
+                content: '\25be';
+            }
+
+            > ul {
+                left: 0;
+                right: 0;
+                top: 100%;
+            }
+        }
+
+    }
+    [data-icon]::before {
+        content: attr(data-icon);
+        font: normal normal normal 1.5em 'Material Icons';
+    }
+
+    @media screen and (width <=40em) {
+        position: relative;
+
+        &::before {
+            content: '\2261';
+            color: var(--color-title);
+            font-size: 3em;
+            width: 1em;
+            height: 1em;
+            text-align: center;
+            align-self: center;
+        }
+
+        &:not(:focus-within) {
+            > ul {
+                display: none;
+            }
+        }
+
+        ul {
+            background-color: var(--background-color);
+            left: 0;
+            width: 100vw;
+            top: 100%;
+            box-shadow: 0 .1rem .25rem rgba(0, 0, 0, .5);
+        }
+
+        li:not(:focus-within) ul {
+            display: none;
+        }
+
+        li:has(ul) > a::after {
+            content: '\25be';
+        }
+
+        > ul {
+            flex-direction: column;
+            position: absolute;
+
+            > li > ul {
+                right: auto;
+            }
+
+            > li > a {
+                justify-content: start;
+            }
+        }
     }
 }
