--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,14 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 :root {
-  --hue: 210;
-  --sat: 50%;
-  --lum: 50%;
+  --h: 210;
+  --s: 50%;
+  --l: 50%;
   --font-family-text: Arial, Helvetica, sans-serif;
   --font-family-title: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   --interface-width: 960px;
   --color-text: #333;
-  --color-title: hsl(var(--hue), var(--sat), 30%);
+  --color-title: hsl(var(--h), var(--s), 30%);
 }
 
 html {
@@ -18,7 +19,7 @@ html {
 
 body {
   height: 100%;
-  background-color: hsl(var(--hue), var(--sat), 10%);
+  background-color: hsl(var(--h), var(--s), 10%);
 }
 
 *,
@@ -45,53 +46,163 @@ caption {
 
 .interface {
   min-height: 100%;
-  width: var(--interface-width);
   display: grid;
   grid-template-rows: auto auto 1fr auto;
-  grid-template-areas: "header" "nav" "app" "footer";
   margin: 0 auto;
-  background-color: hsl(var(--hue), var(--sat), 100%);
+  background-color: hsl(var(--h), var(--s), 100%);
 }
 .interface > header,
 .interface > footer {
-  background-color: hsl(var(--hue), var(--sat), var(--lum));
+  background-color: hsl(var(--h), var(--s), var(--l));
   padding: 1em;
   color: #fff;
+  grid-column: 1/-1;
 }
 .interface > header h1,
 .interface > footer h1 {
   color: inherit;
 }
+.interface > nav {
+  --background-color: hsl(var(--h), var(--s), 90%);
+  --highlight: hsl(var(--h), var(--s), 85%);
+  --highlight-text: hsl(var(--h), var(--s), 10%);
+}
+@media screen and (width <= 40em) {
+  .interface {
+    grid-template-columns: 3em 1fr;
+    grid-template-rows: auto 1fr auto;
+  }
+  .interface > header {
+    grid-column: 2;
+  }
+  .interface > nav {
+    grid-column: 1;
+    grid-row: 1;
+  }
+}
 
 nav {
-  display: flex;
+  --height: 3em;
+  --background-color: hsl(var(--h), var(--s), 90%);
+  --highlight: hsl(var(--h), var(--s), 85%);
+  --highlight-text: hsl(var(--h), var(--s), 0%);
+  background-color: var(--background-color);
   color: var(--color-title);
+  justify-content: center;
   line-height: 1;
+  z-index: 1;
+}
+nav,
+nav * {
+  display: flex;
 }
 nav a {
-  color: inherit;
-  text-decoration: none;
-  display: flex;
-  justify-content: center;
   align-items: center;
-  text-align: center;
+  color: inherit;
+  flex-grow: 1;
+  gap: 0.5em;
+  min-height: var(--height);
   padding: 0 1em;
+  text-align: center;
+  text-decoration: none;
+  white-space: nowrap;
 }
-nav ul {
-  display: flex;
-  list-style-type: none;
+nav a::after {
+  margin-right: -0.5em;
+  margin-left: auto;
 }
 nav li {
-  display: flex;
+  position: relative;
 }
-nav li:hover {
-  background-color: hsl(var(--hue), var(--sat), 85%);
+nav li:hover, nav li:focus-within {
+  background-color: var(--highlight);
 }
-.interface > nav {
-  background-color: hsl(var(--hue), var(--sat), 90%);
-  height: 2em;
+nav li:hover > a, nav li:focus-within > a {
+  color: var(--highlight-text);
+}
+nav li:has(ul) > a::after {
+  content: "▸";
+}
+nav ul {
+  background-color: var(--background-color);
+  flex-direction: column;
+  left: 100%;
+  list-style-type: none;
+  position: absolute;
+  z-index: 2;
+}
+nav ul :not(:focus-within):not(:hover) ul {
+  display: none;
+}
+nav > ul {
+  background-color: transparent;
+  flex-direction: row;
+  flex-grow: 1;
+  position: static;
+}
+nav > ul > li > a {
+  justify-content: center;
+}
+nav > ul > li:has(ul) > a::after {
+  content: "▾";
+}
+nav > ul > li > ul {
+  left: 0;
+  right: 0;
+  top: 100%;
+}
+nav [data-icon]::before {
+  content: attr(data-icon);
+  font: normal normal normal 1.5em "Material Icons";
+}
+@media screen and (width <= 40em) {
+  nav {
+    position: relative;
+  }
+  nav::before {
+    content: "≡";
+    color: var(--color-title);
+    font-size: 3em;
+    width: 1em;
+    height: 1em;
+    text-align: center;
+    align-self: center;
+  }
+  nav:not(:focus-within) > ul {
+    display: none;
+  }
+  nav ul {
+    background-color: var(--background-color);
+    left: 0;
+    width: 100vw;
+    top: 100%;
+    box-shadow: 0 0.1rem 0.25rem rgba(0, 0, 0, 0.5);
+  }
+  nav li:not(:focus-within) ul {
+    display: none;
+  }
+  nav li:has(ul) > a::after {
+    content: "▾";
+  }
+  nav > ul {
+    flex-direction: column;
+    position: absolute;
+  }
+  nav > ul > li > ul {
+    right: auto;
+  }
+  nav > ul > li > a {
+    justify-content: start;
+  }
 }
 
 #app {
   padding: 2em;
+  grid-column: 1/-1;
+}
+
+svg {
+  fill: transparent;
+  stroke: #000;
+  stroke-width: 2;
 }
